Сorrection of SVG links and icons

--- a/index.html
+++ b/index.html
@@ -152,41 +152,33 @@
               <div class="card-block">
                 <h3 class="list-header">Mark Guerrero</h3>
                 <p class="paragraph-text">Product Designer</p>
-                <ul class="f-size">
-                  <li class="svg-item">
+                <ul class="card-list">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#instagram"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#twitter"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#facebook"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#linkedin"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -202,41 +194,36 @@
               <div class="card-block">
                 <h3 class="list-header">Tom Ford</h3>
                 <p class="paragraph-text">Frontend Developer</p>
-                <ul class="f-size">
-                  <li class="svg-item">
+                <ul class="card-list">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#instagram"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#twitter"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use
+                          class="link-twitter"
+                          href="./images/icons.svg#twitter"
+                        ></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#facebook"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#linkedin"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -252,41 +239,33 @@
               <div class="card-block">
                 <h3 class="list-header">Camila Garcia</h3>
                 <p class="paragraph-text">Marketing</p>
-                <ul class="f-size">
-                  <li class="svg-item">
+                <ul class="card-list">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#instagram"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#twitter"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#facebook"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#linkedin"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -302,41 +281,33 @@
               <div class="card-block">
                 <h3 class="list-header">Daniel Wilson</h3>
                 <p class="paragraph-text">UI Designer</p>
-                <ul class="f-size">
-                  <li class="svg-item">
+                <ul class="card-list">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#instagram"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#twitter"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#facebook"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
                     </a>
                   </li>
-                  <li class="svg-item">
+                  <li class="card-item">
                     <a href="">
-                      <div class="div-card">
-                        <svg class="card-svg">
-                          <use href="../images/icons.svg#linkedin"></use>
-                        </svg>
-                      </div>
+                      <svg class="card-svg">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
                     </a>
                   </li>
                 </ul>
@@ -347,67 +318,49 @@
       </section>
       <!-- customers -->
       <section class="section">
-        <div class="container">
+        <div class="container customers">
           <h2 class="header-section">Customers</h2>
-          <ul class="customers-list">
+          <ul class="card-list">
             <li class="customers-item">
-              <!-- <a href="" class="link-client"> -->
-              <a href="" class="f-size">
-                <div class="icon-links">
-                  <svg class="customers-svg">
-                    <use href="../images/icons.svg#client0"></use>
-                  </svg>
-                </div>
+              <a href="">
+                <svg class="card-svg">
+                  <use href="./images/icons.svg#Logo0"></use>
+                </svg>
               </a>
             </li>
             <li class="customers-item">
-              <!-- <a href="" class="link-client"> -->
-              <a href="" class="f-size">
-                <div class="icon-links">
-                  <svg class="customers-svg">
-                    <use href="../images/icons.svg#client1"></use>
-                  </svg>
-                </div>
+              <a href="">
+                <svg class="card-svg">
+                  <use href="./images/icons.svg#Logo1"></use>
+                </svg>
               </a>
             </li>
             <li class="customers-item">
-              <!-- <a href="" class="link-client"> -->
-              <a href="" class="f-size">
-                <div class="icon-links">
-                  <svg class="customers-svg">
-                    <use href="../images/icons.svg#client2"></use>
-                  </svg>
-                </div>
+              <a href="">
+                <svg class="card-svg">
+                  <use href="./images/icons.svg#Logo2"></use>
+                </svg>
               </a>
             </li>
             <li class="customers-item">
-              <!-- <a href="" class="link-client"> -->
-              <a href="" class="f-size">
-                <div class="icon-links">
-                  <svg class="customers-svg">
-                    <use href="../images/icons.svg#client3"></use>
-                  </svg>
-                </div>
+              <a href="">
+                <svg class="card-svg">
+                  <use href="./images/icons.svg#Logo3"></use>
+                </svg>
               </a>
             </li>
             <li class="customers-item">
-              <!-- <a href="" class="link-client"> -->
-              <a href="" class="f-size">
-                <div class="icon-links">
-                  <svg class="customers-svg">
-                    <use href="../images/icons.svg#client4"></use>
-                  </svg>
-                </div>
+              <a href="">
+                <svg class="card-svg">
+                  <use href="./images/icons.svg#Logo4"></use>
+                </svg>
               </a>
             </li>
             <li class="customers-item">
-              <!-- <a href="" class="link-client"> -->
-              <a href="" class="f-size">
-                <div class="icon-links">
-                  <svg class="customers-svg">
-                    <use href="../images/icons.svg#client5"></use>
-                  </svg>
-                </div>
+              <a href="">
+                <svg class="card-svg">
+                  <use href="./images/icons.svg#Logo5"></use>
+                </svg>
               </a>
             </li>
           </ul>
@@ -430,8 +383,8 @@
           </li>
           <li class="social-media-item">
             <h4 class="social-media-header">Social media</h4>
-            <ul class="f-size">
-              <li class="svg-item">
+            <ul class="card-list">
+              <li class="card-item">
                 <a href="">
                   <div class="div-card">
                     <svg class="card-svg">
@@ -440,7 +393,7 @@
                   </div>
                 </a>
               </li>
-              <li class="svg-item">
+              <li class="card-item">
                 <a href="">
                   <div class="div-card">
                     <svg class="card-svg">
@@ -449,7 +402,7 @@
                   </div>
                 </a>
               </li>
-              <li class="svg-item">
+              <li class="card-item">
                 <a href="">
                   <div class="div-card">
                     <svg class="card-svg">
@@ -458,7 +411,7 @@
                   </div>
                 </a>
               </li>
-              <li class="svg-item">
+              <li class="card-item">
                 <a href="">
                   <div class="div-card">
                     <svg class="card-svg">
