--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
                 <a class="navigation-link" href="./portfolio.html">Portfolio</a>
               </li>
               <li class="navigation-item">
-                <a class="navigation-link" href="">Contacts</a>
+                <a class="navigation-link" href="./proba.html">Contacts</a>
               </li>
             </ul>
           </div>
@@ -218,15 +218,59 @@
     <!-- footer -->
     <footer class="footer">
       <div class="container">
-        <!--logo of footer-->
-        <a class="logo-part1" href="./index.html">
-          WEB<!--
-          --><span class="logo-part2">STUDIO</span>
-        </a>
-        <p class="text-explanation">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <ul class="footer-list">
+          <li>
+            <a class="logo-part1" href="./index.html">
+              WEB<!--
+              --><span class="logo-part2">STUDIO</span>
+            </a>
+            <p class="text-explanation">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </li>
+          <li class="social-media-item">
+            <h4 class="social-media-header">Social media</h4>
+            <ul class="card-list">
+              <li class="card-item">
+                <a href="">
+                  <div class="div-card">
+                    <svg class="card-svg">
+                      <use href="../images/icons.svg#instagram"></use>
+                    </svg>
+                  </div>
+                </a>
+              </li>
+              <li class="card-item">
+                <a href="">
+                  <div class="div-card">
+                    <svg class="card-svg">
+                      <use href="../images/icons.svg#twitter"></use>
+                    </svg>
+                  </div>
+                </a>
+              </li>
+              <li class="card-item">
+                <a href="">
+                  <div class="div-card">
+                    <svg class="card-svg">
+                      <use href="../images/icons.svg#facebook"></use>
+                    </svg>
+                  </div>
+                </a>
+              </li>
+              <li class="card-item">
+                <a href="">
+                  <div class="div-card">
+                    <svg class="card-svg">
+                      <use href="../images/icons.svg#linkedin"></use>
+                    </svg>
+                  </div>
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
