--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="navigation-link" href="./portfolio.html">Portfolio</a>
               </li>
               <li class="navigation-item">
-                <a class="navigation-link" href="./proba.html">Contacts</a>
+                <a class="navigation-link" href="">Contacts</a>
               </li>
             </ul>
           </div>
