fixed bugs in displaying icons

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
             <ul class="card-list">
               <li class="card-item">
                 <a href="">
-                  <div class="div-card">
+                  <div>
                     <svg class="card-svg">
                       <use href="../images/icons.svg#instagram"></use>
                     </svg>
@@ -395,7 +395,7 @@
               </li>
               <li class="card-item">
                 <a href="">
-                  <div class="div-card">
+                  <div>
                     <svg class="card-svg">
                       <use href="../images/icons.svg#twitter"></use>
                     </svg>
@@ -404,7 +404,7 @@
               </li>
               <li class="card-item">
                 <a href="">
-                  <div class="div-card">
+                  <div>
                     <svg class="card-svg">
                       <use href="../images/icons.svg#facebook"></use>
                     </svg>
@@ -413,7 +413,7 @@
               </li>
               <li class="card-item">
                 <a href="">
-                  <div class="div-card">
+                  <div>
                     <svg class="card-svg">
                       <use href="../images/icons.svg#linkedin"></use>
                     </svg>
