--- a/portfolio.html
+++ b/portfolio.html
@@ -234,36 +234,36 @@
             <ul class="card-list">
               <li class="card-item">
                 <a href="">
-                  <div class="div-card">
+                  <div>
                     <svg class="card-svg">
-                      <use href="../images/icons.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </div>
                 </a>
               </li>
               <li class="card-item">
                 <a href="">
-                  <div class="div-card">
+                  <div>
                     <svg class="card-svg">
-                      <use href="../images/icons.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </div>
                 </a>
               </li>
               <li class="card-item">
                 <a href="">
-                  <div class="div-card">
+                  <div>
                     <svg class="card-svg">
-                      <use href="../images/icons.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </div>
                 </a>
               </li>
               <li class="card-item">
                 <a href="">
-                  <div class="div-card">
+                  <div>
                     <svg class="card-svg">
-                      <use href="../images/icons.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </div>
                 </a>
