--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
                 <a href="">
                   <div>
                     <svg class="card-svg">
-                      <use href="../images/icons.svg#instagram"></use>
+                      <use href="./images/icons.svg#instagram"></use>
                     </svg>
                   </div>
                 </a>
@@ -397,7 +397,7 @@
                 <a href="">
                   <div>
                     <svg class="card-svg">
-                      <use href="../images/icons.svg#twitter"></use>
+                      <use href="./images/icons.svg#twitter"></use>
                     </svg>
                   </div>
                 </a>
@@ -406,7 +406,7 @@
                 <a href="">
                   <div>
                     <svg class="card-svg">
-                      <use href="../images/icons.svg#facebook"></use>
+                      <use href="./images/icons.svg#facebook"></use>
                     </svg>
                   </div>
                 </a>
@@ -415,7 +415,7 @@
                 <a href="">
                   <div>
                     <svg class="card-svg">
-                      <use href="../images/icons.svg#linkedin"></use>
+                      <use href="./images/icons.svg#linkedin"></use>
                     </svg>
                   </div>
                 </a>
