--- a/index.html
+++ b/index.html
@@ -62,11 +62,9 @@
     <main class="main">
       <!--hero-->
       <section class="hero">
-        <div class="overlay">
-          <div class="container">
-            <h1 class="site-theme">Effective Solutions for Your Business</h1>
-            <button class="filter-button" type="button">Order Service</button>
-          </div>
+        <div class="container">
+          <h1 class="site-theme">Effective Solutions for Your Business</h1>
+          <button class="filter-button" type="button">Order Service</button>
         </div>
       </section>
       <!--peculiarities-->
@@ -154,28 +152,28 @@
                 <p class="paragraph-text">Product Designer</p>
                 <ul class="card-list">
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -196,14 +194,14 @@
                 <p class="paragraph-text">Frontend Developer</p>
                 <ul class="card-list">
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use
                           class="link-twitter"
@@ -213,14 +211,14 @@
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -241,28 +239,28 @@
                 <p class="paragraph-text">Marketing</p>
                 <ul class="card-list">
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -283,28 +281,28 @@
                 <p class="paragraph-text">UI Designer</p>
                 <ul class="card-list">
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="card-item">
-                    <a href="">
+                    <a href="" class="card-item-link">
                       <svg class="card-svg">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -322,42 +320,42 @@
           <h2 class="header-section">Customers</h2>
           <ul class="card-list">
             <li class="customers-item">
-              <a href="">
+              <a href="" class="customers-item-link">
                 <svg class="card-svg">
                   <use href="./images/icons.svg#Logo0"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a href="">
+              <a href="" class="customers-item-link">
                 <svg class="card-svg">
                   <use href="./images/icons.svg#Logo1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a href="">
+              <a href="" class="customers-item-link">
                 <svg class="card-svg">
                   <use href="./images/icons.svg#Logo2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a href="">
+              <a href="" class="customers-item-link">
                 <svg class="card-svg">
                   <use href="./images/icons.svg#Logo3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a href="">
+              <a href="" class="customers-item-link">
                 <svg class="card-svg">
                   <use href="./images/icons.svg#Logo4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-item">
-              <a href="">
+              <a href="" class="customers-item-link">
                 <svg class="card-svg">
                   <use href="./images/icons.svg#Logo5"></use>
                 </svg>
@@ -385,39 +383,31 @@
             <h4 class="social-media-header">Social media</h4>
             <ul class="card-list">
               <li class="card-item">
-                <a href="">
-                  <div>
-                    <svg class="card-svg">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
-                  </div>
+                <a href="" class="card-item-link">
+                  <svg class="card-svg">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
                 </a>
               </li>
               <li class="card-item">
-                <a href="">
-                  <div>
-                    <svg class="card-svg">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
-                  </div>
+                <a href="" class="card-item-link">
+                  <svg class="card-svg">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
                 </a>
               </li>
               <li class="card-item">
-                <a href="">
-                  <div>
-                    <svg class="card-svg">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
-                  </div>
+                <a href="" class="card-item-link">
+                  <svg class="card-svg">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
                 </a>
               </li>
               <li class="card-item">
-                <a href="">
-                  <div>
-                    <svg class="card-svg">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
-                  </div>
+                <a href="" class="card-item-link">
+                  <svg class="card-svg">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
                 </a>
               </li>
             </ul>
