--- a/portfolio.html
+++ b/portfolio.html
@@ -233,39 +233,31 @@
             <h4 class="social-media-header">Social media</h4>
             <ul class="card-list">
               <li class="card-item">
-                <a href="">
-                  <div>
-                    <svg class="card-svg">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
-                  </div>
+                <a href="" class="card-item-link">
+                  <svg class="card-svg">
+                    <use href="./images/icons.svg#instagram"></use>
+                  </svg>
                 </a>
               </li>
               <li class="card-item">
-                <a href="">
-                  <div>
-                    <svg class="card-svg">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
-                  </div>
+                <a href="" class="card-item-link">
+                  <svg class="card-svg">
+                    <use href="./images/icons.svg#twitter"></use>
+                  </svg>
                 </a>
               </li>
               <li class="card-item">
-                <a href="">
-                  <div>
-                    <svg class="card-svg">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
-                  </div>
+                <a href="" class="card-item-link">
+                  <svg class="card-svg">
+                    <use href="./images/icons.svg#facebook"></use>
+                  </svg>
                 </a>
               </li>
               <li class="card-item">
-                <a href="">
-                  <div>
-                    <svg class="card-svg">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
-                  </div>
+                <a href="" class="card-item-link">
+                  <svg class="card-svg">
+                    <use href="./images/icons.svg#linkedin"></use>
+                  </svg>
                 </a>
               </li>
             </ul>
