fixed bugs in displaying icons

--- a/portfolio.html
+++ b/portfolio.html
@@ -86,7 +86,7 @@
           <!-- project cards -->
           <ul class="project-cards">
             <li class="project-cards-item">
-              <a href="">
+              <a class="project-card-link" href="">
                 <img
                   src="./images/project1.jpg"
                   alt="BankApp interface pages design"
@@ -100,7 +100,7 @@
               </a>
             </li>
             <li class="project-cards-item">
-              <a href="">
+              <a class="project-card-link" href="">
                 <img
                   src="./images/project2.jpg"
                   alt="Smartphone scanning a QR code"
